--- a/.azdo/pipelines/pipes/templates/create-infra-template.yml
+++ b/.azdo/pipelines/pipes/templates/create-infra-template.yml
@@ -2,42 +2,16 @@
 # Template to deploy Azure Resources for one environment
 # ----------------------------------------------------------------------------------------------------
 parameters: 
+- name: variableGroupName
+  default: ''
 - name: createInfra
   default: true
-- name: stageName
-  default: 'CI'
 - name: environment
   default: 'CI'
-- name: azureSubscription
-  default: ''
-- name: webAppName
-  default: ''
-- name: apiAppName
-  default: ''
-- name: apiAppAPIMName
-  default: ''
-- name: organizationName
-  default: ''
-- name: adminEmail
-  default: ''
-- name: resourceGroupName
-  default: ''
-- name: region
-  default: ''
 - name: templateFolderName
   default: 'infra\arm'
 - name: bicepFolderName
   default: 'infra\bicep'
-- name: adDomain
-  default: ''
-- name: adTenantId
-  default: ''
-- name: adClientId
-  default: ''
-- name: webAPIScope
-  default: ''
-- name: webAPIUrl
-  default: ''
 
 # ----------------------------------------------------------------------------------------------------
 jobs:
@@ -47,27 +21,46 @@ jobs:
 - job: CreateInfraJob
   displayName: Create Infra Job
   variables:
+    - group: ${{ parameters.variableGroupName }}
+    - name: environmentNameUpper
+      value: ${{ upper(parameters.environment) }}
+    - name: environmentNameLower
+      value: ${{ lower(parameters.environment) }}
     - name: templateDirectory
       value: '$(Pipeline.Workspace)\s\${{ parameters.templateFolderName }}'
     - name: bicepDirectory
       value: '$(Pipeline.Workspace)\s\${{ parameters.bicepFolderName }}'
   steps:
+  - bash: |
+      runDateTime=$(echo $(date '+%Y%m%d-%H%M%S'))
+      echo "##vso[task.setvariable variable=runDateTime]$runDateTime"
+      echo "runDateTime=$runDateTime"
+      runDateTimeZ=$(echo $(date '+%Y%m%dT%H%M%SZ'))
+      echo "##vso[task.setvariable variable=runDateTimeZ]$runDateTimeZ"
+      echo "runDateTimeZ=$runDateTimeZ"
+    displayName: 'Create Variables'
+    continueOnError: true
   - task: CmdLine@2
     inputs:
       script: |
         echo "createInfra=${{ parameters.createInfra }}"
-        echo "stageName=${{ parameters.stageName }}"
         echo "environment=${{ parameters.environment }}"
-        echo "azureSubscription=${{ parameters.azureSubscription }}"
-        echo "webAppName=${{ parameters.webAppName }}"
-        echo "apiAppAPIMName=${{ parameters.apiAppAPIMName }}"
-        echo "organizationName=${{ parameters.organizationName }}"
-        echo "adminEmail=${{ parameters.adminEmail }}"
-        echo "resourceGroupName=${{ parameters.resourceGroupName }}"
-        echo "region=${{ parameters.region }}"
-        echo "adDomain=${{ parameters.adDomain }}"
-        echo "adTenantId=${{ parameters.adTenantId }}"
-        echo "adClientId=${{ parameters.adClientId }}"
+
+        echo "adminEmail=$(adminEmail)"
+        echo "adDomain=$(adDomain)"
+        echo "adTenantId=$(adTenantId)"
+        echo "adClientId=$(adClientId)"
+        echo "apiAppName=$(apiAppName)"
+        echo "apiAppAPIMName=$(apiAppAPIMName)"
+        echo "azureSubscription=$(azureSubscription)"
+        echo "organizationName=$(organizationName)"
+        echo "resourceGroupName=$(resourceGroupName)"
+        echo "region=$(region)"
+        echo "webAPIScope=$(webAPIScope)"
+        echo "webAPIUrl=$(webAPIUrl)"
+        echo "webAppName=$(webAppName)"
+        echo "Bicep Deploy Sample Command:"
+        echo "  az deployment group create -n main-deploy-$(runDateTimeZ) --resource-group $(resourceGroupName) --template-file 'main.bicep' --parameters appName $(webAppName) environmentCode $(environmentNameLower) adDomain $(adDomain) adTenantId $(adTenantId) adClientId $(adClientId) location $(region) webAPIScope $(webAPIScope) webAPIUrl $(webAPIUrl)"
         echo "Directory Listing for: $(templateDirectory)"
         dir  $(templateDirectory) /s
         echo "Directory Listing for: $(bicepDirectory)"
@@ -79,59 +72,57 @@ jobs:
     - task: AzureResourceGroupDeployment@2
       displayName: '1. Create APIM Consumption'
       inputs:
-        azureSubscription: ${{ parameters.azureSubscription }}
-        resourceGroupName: ${{ parameters.resourceGroupName }}
-        location: ${{ parameters.region }}
+        azureSubscription: $(azureSubscription)
+        resourceGroupName: $(resourceGroupName)
+        location: $(region)
         csmFile: '$(templateDirectory)\api-management-consumption.json'
-        overrideParameters: '-apimName ${{ parameters.apiAppAPIMName }}2 -organizationName ${{ parameters.organizationName }} -adminEmail ${{ parameters.adminEmail }}'
+        overrideParameters: '-apimName $(apiAppAPIMName)2 -organizationName $($)organizationName) -adminEmail $(adminEmail)'
         deploymentOutputs: ResourceGroupDeploymentOutputs
 
     - task: AzureResourceGroupDeployment@2
       displayName: '2. Create APIM Dev'
       inputs:
-        azureSubscription: ${{ parameters.azureSubscription }}
-        resourceGroupName: ${{ parameters.resourceGroupName }}
-        location: ${{ parameters.region }}
+        azureSubscription: $(azureSubscription)
+        resourceGroupName: $(resourceGroupName)
+        location: $(region)
         csmFile: '$(templateDirectory)\api-management-core.json'
-        overrideParameters: '-serviceName ${{ parameters.apiAppAPIMName }}3 -publisherName ${{ parameters.organizationName }} -publisherEmail ${{ parameters.adminEmail }}'
+        overrideParameters: '-serviceName $(apiAppAPIMName)3 -publisherName $(organizationName) -publisherEmail $(adminEmail)'
         deploymentOutputs: ResourceGroupDeploymentOutputs
 
     - task: AzureResourceGroupDeployment@2
       displayName: '3. Create WebAPI Service'
       inputs:
-        azureSubscription: ${{ parameters.azureSubscription }}
-        resourceGroupName: ${{ parameters.resourceGroupName }}
-        location: ${{ parameters.region }}
+        azureSubscription: $(azureSubscription)
+        resourceGroupName: $(resourceGroupName)
+        location: $(region)
         csmFile: '$(templateDirectory)\appservice-web-api.json'
-        overrideParameters: '-appName ${{ parameters.apiAppName }}'
+        overrideParameters: '-appName $(apiAppName)'
         deploymentOutputs: ResourceGroupDeploymentOutputs
 
     # - task: AzureResourceGroupDeployment@2
     #   displayName: '4. Create WebApp Service ARM'
     #   inputs:
-    #     azureSubscription: ${{ parameters.azureSubscription }}
-    #     resourceGroupName: ${{ parameters.resourceGroupName }}
-    #     location: ${{ parameters.region }}
+    #     azureSubscription: ${{ parameters.azureSubscription)
+    #     resourceGroupName: ${{ parameters.resourceGroupName)
+    #     location: ${{ parameters.region)
     #     csmFile: '$(templateDirectory)\appservice-web-app.json'
-    #     overrideParameters: '-appName ${{ parameters.webAppName }}'
+    #     overrideParameters: '-appName ${{ parameters.webAppName)'
     #     deploymentOutputs: ResourceGroupDeploymentOutputs
 
     - task: AzureResourceGroupDeployment@2
       displayName: '4. Create WebApp Bicep'
       inputs:
-        azureSubscription: ${{ parameters.azureSubscription }}
-        resourceGroupName: ${{ parameters.resourceGroupName }}
-        location: ${{ parameters.region }}
+        azureSubscription: $(azureSubscription)
+        resourceGroupName: $(resourceGroupName)
+        location: $(region)
         csmFile: '$(bicepDirectory)\main.bicep'
         overrideParameters: >
-          -appName ${{ parameters.webAppName }} 
-          -environmentCode ${{ parameters.environment }}
-          -location ${{ parameters.region }}
-          -webAPIScope ${{ parameters.webAPIScope }}
-          -webAPIUrl ${{ parameters.webAPIUrl }}
-          -adDomain ${{ parameters.adDomain }}
-          -adTenantId ${{ parameters.adTenantId }}
-          -adClientId ${{ parameters.adClientId }}
-          -webAPIScope:  ${{ parameters.webAPIScope }}
-          -webAPIUrl:  ${{ parameters.webAPIUrl }}
+          -appName $(webAppName)
+          -environmentCode $(environmentNameLower)
+          -adDomain $(adDomain)
+          -adTenantId $(adTenantId)
+          -adClientId $(adClientId)
+          -location $(region)
+          -webAPIScope $(webAPIScope)
+          -webAPIUrl $(webAPIUrl)
         deploymentOutputs: ResourceGroupDeploymentOutputs
