--- a/.azdo/pipelines/pipes/templates/deploy-apps-template.yml
+++ b/.azdo/pipelines/pipes/templates/deploy-apps-template.yml
@@ -2,26 +2,20 @@
 # Template to deploy the WebAPI and WebApp to Azure
 # ----------------------------------------------------------------------------------------------------
 parameters: 
+- name: variableGroupName
+  default: ''
 - name: buildDeployApps
   default: true
-- name: stageName
-  default: 'CI'
 - name: environment
   default: 'CI'
-- name: azureSubscription
-  default: ''
-- name: webAppName
-  default: ''
 - name: webPackageName
-  default: ''  
-- name: apiAppName
   default: ''
 - name: apiPackageName
-  default: ''  
+  default: ''
 - name: apiArtifactName
-  default: ''  
+  default: ''
 - name: webArtifactName
-  default: ''  
+  default: ''
 
 # ----------------------------------------------------------------------------------------------------
 jobs:
@@ -31,6 +25,8 @@ jobs:
 
 - job: DeployAppsJob
   displayName: Deploy Apps Job
+  variables:
+    - group: ${{ parameters.variableGroupName }}
   steps:
   - ${{ if eq(lower(parameters.buildDeployApps), 'true') }}:
     - task: DownloadPipelineArtifact@2
@@ -48,15 +44,14 @@ jobs:
   - task: CmdLine@2
     inputs:
       script: |
-        echo "stageName=${{ parameters.stageName }}"
         echo "environment=${{ parameters.environment }}"
-        echo "azureSubscription=${{ parameters.azureSubscription }}"
-        echo "webAppName=${{ parameters.webAppName }}"
         echo "webPackageName=${{ parameters.webPackageName }}"
-        echo "apiAppName=${{ parameters.apiAppName }}"
         echo "apiPackageName=${{ parameters.apiPackageName }}"
         echo "apiArtifactName=${{ parameters.apiArtifactName }}"
         echo "webArtifactName=${{ parameters.webArtifactName }}"
+        echo "apiAppName=${{ variables.apiAppName }}"
+        echo "webAppName=${{ variables.webAppName }}"
+        echo "azureSubscription=$(azureSubscription)"
         echo "Directory of Pipeline.Workspace:"
         dir  $(Pipeline.Workspace) /s
     displayName: 'Display Variables and Tree'
@@ -66,15 +61,15 @@ jobs:
     - task: AzureRmWebAppDeployment@4
       displayName: '1. Deploy API'
       inputs:
-        azureSubscription: ${{ parameters.azureSubscription }}
-        WebAppName: ${{ parameters.apiAppName }}
+        azureSubscription: $(azureSubscription)
+        WebAppName: ${{ variables.apiAppName }}
         package: '$(Pipeline.Workspace)\WebApi\*.zip'
         AppSettings: ''
 
     - task: AzureRmWebAppDeployment@4
       displayName: '2. Deploy WebApp'
       inputs:
-        azureSubscription: ${{ parameters.azureSubscription }}
-        WebAppName: ${{ parameters.webAppName }}
+        azureSubscription: $(azureSubscription)
+        WebAppName: ${{ variables.webAppName }}
         package: '$(Pipeline.Workspace)\WebApp\*.zip'
         AppSettings: ''
