Add another debugging step

--- a/.azdo/pipelines/pipes/templates/create-infra-template.yml
+++ b/.azdo/pipelines/pipes/templates/create-infra-template.yml
@@ -65,6 +65,7 @@ jobs:
         dir  $(templateDirectory) /s
         echo "Directory Listing for: $(bicepDirectory)"
         dir  $(bicepDirectory) /s
+        type $(bicepDirectory)\main.bicep
     displayName: 'Display Variables and Tree'
     continueOnError: true
 
