Remove extra step in PW pipeline

--- a/.azdo/pipelines/run-playwright-tests.yml
+++ b/.azdo/pipelines/run-playwright-tests.yml
@@ -21,16 +21,16 @@ steps:
   env:
     CI: 'true'
 
-- task: PublishTestResults@2
-  displayName: 'Publish test results'
-  inputs:
-    searchFolder: 'test-results'
-    testResultsFormat: 'JUnit'
-    testResultsFiles: 'e2e-junit-results.xml'
-    mergeTestResults: true
-    failTaskOnFailedTests: true
-    testRunTitle: 'My End-To-End Tests'
-  condition: succeededOrFailed()
+# - task: PublishTestResults@2
+#   displayName: 'Publish test results'
+#   inputs:
+#     searchFolder: 'test-results'
+#     testResultsFormat: 'JUnit'
+#     testResultsFiles: 'e2e-junit-results.xml'
+#     mergeTestResults: true
+#     failTaskOnFailedTests: true
+#     testRunTitle: 'My End-To-End Tests'
+#   condition: succeededOrFailed()
   
 - task: PublishPipelineArtifact@1
   inputs:
