Update playwright templates

--- a/.azdo/pipelines/run-playwright-tests.yml
+++ b/.azdo/pipelines/run-playwright-tests.yml
@@ -1,40 +1,27 @@
-trigger:
-- main
+# ------------------------------------------------------------------------------------------------------------------------
+# Pipeline to run a Playwright test
+# ------------------------------------------------------------------------------------------------------------------------
+name: $(date:yyyy).$(date:MM).$(date:dd)$(rev:.r)
 
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '18'
-  displayName: 'Install Node.js'
+# ------------------------------------------------------------------------------------------------------------------------
+trigger: none
 
-- script: npm ci
-  displayName: 'npm ci'
+parameters:
+  - name: runPlaywright
+    displayName: Run Playwright Tests
+    type: boolean
+    default: false
 
-- script: npx playwright install --with-deps
-  displayName: 'Install Playwright browsers'
-
-- script: npx playwright test
-  displayName: 'Run Playwright tests'
-  env:
-    CI: 'true'
-
-# - task: PublishTestResults@2
-#   displayName: 'Publish test results'
-#   inputs:
-#     searchFolder: 'test-results'
-#     testResultsFormat: 'JUnit'
-#     testResultsFiles: 'e2e-junit-results.xml'
-#     mergeTestResults: true
-#     failTaskOnFailedTests: true
-#     testRunTitle: 'My End-To-End Tests'
-#   condition: succeededOrFailed()
+stages:
+# ------------------------------------------------------------------------------------------------------------------------
   
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: playwright-report
-    artifact: playwright-report
-    publishLocation: 'pipeline'
-  condition: succeededOrFailed()
+- template: pipes/build-infra-deploy-pipe.yml
+  parameters:
+    variableGroupName: 'Playwright'
+    keyVaultVariableGroupName: 'PlaywrightSecrets'
+    environment: 'CI'
+    baseTestingUrl: 'https://lll-playwright-web.azurewebsites.net/'
+    testScriptPath: 'tests'
