--- a/.azdo/pipelines/pipes/templates/playwright-template.yml
+++ b/.azdo/pipelines/pipes/templates/playwright-template.yml
@@ -25,8 +25,9 @@ jobs:
     - group: ${{ parameters.keyVaultVariableGroupName }}
 
   steps:
-    - task: CmdLine@2
-      inputs:
+  - task: CmdLine@2
+    displayName: 'Display Variables and Tree'
+    inputs:
       script: |
         echo "variableGroupName=${{ parameters.variableGroupName }}"
         echo "keyVaultVariableGroupName=${{ parameters.keyVaultVariableGroupName }}"
@@ -35,40 +36,41 @@ jobs:
         echo "testScriptPath=${{ parameters.testScriptPath }}"
         echo "Directory of pipeline workspace:"
         tree $(Pipeline.Workspace)
-    displayName: 'Display Variables and Tree'
     continueOnError: true
 
-    - task: NodeTool@0
-      displayName: 'Install Node.js'
-      inputs:
-        versionSpec: '18'
+  - task: NodeTool@0
+    displayName: 'Install Node.js'
+    inputs:
+      versionSpec: '18'
 
-    - script: npm ci
-      displayName: 'npm Clean Install'
-      workingDirectory: ${{ parameters.testScriptPath }}
+  - script: npm ci
+    displayName: 'npm Clean Install'
+    workingDirectory: ${{ parameters.testScriptPath }}
 
-    - script: npx playwright install --with-deps
-      displayName: 'Install Playwright Browsers'
-      workingDirectory: ${{ parameters.testScriptPath }}
+  - script: npx playwright install --with-deps
+    displayName: 'Install Playwright Browsers'
+    workingDirectory: ${{ parameters.testScriptPath }}
 
-    - script: npx playwright test
-      workingDirectory: ${{ parameters.testScriptPath }}
-      displayName: 'Run Playwright tests'
-      env:
-        CI: 'true'
-        BASE_URL: ${{ parameters.baseTestingUrl }}
-        USERNAME: $(testUserName)
-        PASSWORD: $(testUserPassword)
+  - script: npx playwright test
+    workingDirectory: ${{ parameters.testScriptPath }}
+    displayName: 'Run Playwright tests'
+    env:
+      CI: 'true'
+      BASE_URL: ${{ parameters.baseTestingUrl }}
+      USERNAME: $(testUserName)
+      PASSWORD: $(testUserPassword)
 
-    - task: PublishPipelineArtifact@1
-      inputs:
-        targetPath: ${{ parameters.testScriptPath }}/test-results
-        artifact: playwright-report
-        publishLocation: 'pipeline'
-      condition: succeededOrFailed()
+  - task: PublishPipelineArtifact@1
+    displayName: 'Publish PW Artifacts'
+    inputs:
+      targetPath: ${{ parameters.testScriptPath }}/test-results
+      artifact: playwright-report
+      publishLocation: 'pipeline'
+    condition: succeededOrFailed()
 
-    - task: PublishTestResults@2
-      inputs:
-        testResultsFormat: 'VSTest'
-        testResultsFiles: '**/${{ parameters.testScriptPath }}/test-results/*.trx'
-      condition: succeededOrFailed()
+  - task: PublishTestResults@2
+    displayName: 'Publish PW Test Results'
+    inputs:
+      testResultsFormat: 'VSTest'
+      testResultsFiles: '**/${{ parameters.testScriptPath }}/test-results/*.trx'
+    condition: succeededOrFailed()
