--- a/.azdo/pipelines/pipes/templates/playwright-template.yml
+++ b/.azdo/pipelines/pipes/templates/playwright-template.yml
@@ -57,8 +57,8 @@ jobs:
     env:
       CI: 'true'
       BASE_URL: ${{ parameters.baseTestingUrl }}
-      TESTUSER: $(testUserName)
-      TESTPASSWORD: $(testUserPassword)
+      TESTUSER: $(PLAYWRIGHT_USERNAME)
+      TESTPASSWORD: $(PLAYWRIGHT_PASSWORD)
 
   - task: CmdLine@2
     inputs:
