--- a/.azdo/pipelines/pipes/templates/playwright-template.yml
+++ b/.azdo/pipelines/pipes/templates/playwright-template.yml
@@ -103,3 +103,9 @@ jobs:
   #   displayName: 'Create PW Report Tab'
   #   inputs:
   #     reportDir: '$(Pipeline.Workspace)/s/playwright-report/index.html'
+
+  # See: https://marketplace.visualstudio.com/items?itemName=awardedsolutions.azure-pipelines-html-report-awardedsolutions
+    - task: PublishHtmlReport@1
+      displayName: 'Create PW Report Tab'
+      inputs:
+        reportDir: '$(Pipeline.Workspace)/s/playwright-report/index.html'
